--- a/app/Components/Rooms/Rooms.css
+++ b/app/Components/Rooms/Rooms.css
@@ -1,3 +1,9 @@
+.Rooms {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 50px;
+}
+
 .Rooms__inner {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
